update config: disabled path to lower.

--- a/config.toml
+++ b/config.toml
@@ -20,6 +20,9 @@ disqusShortname = ""      # disqus_shortname
 googleAnalytics = "G-0KZV6ST6CQ"      # UA-XXXXXXXX-X
 copyright = ""            # default: author.name ↓        # 默认为下面配置的author.name ↓
 
+# 避免大小写转换
+disablePathToLower = true
+
 [frontmatter]
   date  = [":filename", ":default"]
 
