--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ preserveTaxonomyNames = true
 enableRobotsTXT = true
 enableEmoji = true
 theme = "even"
-enableGitInfo = false # use git commit log to generate lastmod record # 可根据 Git 中的提交生成最近更新记录。
+enableGitInfo = true # use git commit log to generate lastmod record # 可根据 Git 中的提交生成最近更新记录。
 
 # Syntax highlighting by Chroma. NOTE: Don't enable `highlightInClient` and `chroma` at the same time!
 pygmentsOptions = "linenos=table"
@@ -24,6 +24,7 @@ copyright = ""            # default: author.name ↓        # 默认为下面配
 disablePathToLower = true
 
 [frontmatter]
+  lastmod = [':git', 'lastmod', ':fileModTime', ':default']
   date  = [":filename", ":default"]
 
 [permalinks]
